# simple_cicd

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/include/: sum.h
src/src/: main.cpp  sum.cpp
tests/: test_script.cpp
